--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+## JetBrains
+.idea
+*.iml
 
-# Test binary, build with `go test -c`
-*.test
+## macOS
+.DS_Store
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+## Project
+output
